# jorkie-server

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Untitled Diagram.drawio  config loading.drawio  jorkie-server-server-class.drawio  project.md
src/jorkieserver/: __init__.py  __main__.py  configurator.py  constants.py  logger.py  logging.py  migration.py  server.py  types.py  utils.py
tests/: configurator_test.py  logging_test.py  server_test.py
