[project]
name = "jorkieserver"
version = "0.1.0"
description = "The server component of the Jorkie automated reconnaissance solution."
authors = [
    {name = "Kyle Walters",email = "kyle@jorkle.com"}
]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "appdirs (>=1.4.4,<2.0.0)",
]
[project.urls]
Homepage = "https://github.com/jorkle/jorkie"
Documentation = "https://github.com/jorklie/jorkie/docs"
Repository = "https://github.com/jorkle/jorkie-server"
Issues = "https://github.com/jorkle/jorkie-server/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  {include = "jorkieserver", from = "src"},
  {include = "jorkieserver/*.py", from = "src"}
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[project.scripts]
jorkie-server = "jorkieserver.__main__:main"
